@@ -19,6 +19,9 @@ documents those changes that are of interest to users and administrators.
  -- openapi/v0.0.35 - Plugin has been removed.
  -- scrontab - Don't accept extra letters after a '@' repeating pattern.
  -- openapi/dbv0.0.38 - Add missing method POST for /associations/.
+ -- Make DefMemPerCPU/MaxMemPerCPU and DefMemPerNode/MaxMemPerNode precedence
+    at the global level the same as in partition level, and print an error
+    if both of a pair are set.
 
 * Changes in Slurm 21.08.3
 ==========================
